--- a/public/Bootstrap/css/style.css
+++ b/public/Bootstrap/css/style.css
@@ -1,29 +1,5 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-
 html {
     scroll-behavior: smooth;
-}
-
-body {
-    margin: 4px;
-    padding: 2px;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    background-color: #eaecf88c;
-    /* background: url('https://source.unsplash.com/1600x900/?nature,water'); */
-}
-
-.container {
-    box-shadow: 0px 0px 5px grey;
-    border: sandybrown;
-    border-radius: 5px;
-    background-color: white;
-    margin-top: 70px;
-    margin-bottom: 70px;
 }
 
 .bg-dark {
@@ -38,20 +14,6 @@ body {
 
 .navbar-dard {
     background-color: #eaecf88c;
-}
-
-header {
-    padding: 1px;
-    margin: 0px;
-    height: 50px;
-}
-
-.box {
-    padding: 5px;
-    margin-top: 15px;
-    margin-bottom: 45px;
-    border-radius: 5px;
-    background-color: #ffffff;
 }
 
 textarea {
@@ -743,13 +705,15 @@ select:focus {
     background: gold;
 }
 
+
+/*
 table {
     width: 100%;
     font-family: monospace;
     border: 1px solid rgb(165 160 160 / 23%);
     font-size: 15px;
     table-layout: inherit;
-}
+} */
 
 .filter-bar {
     width: 102%;
@@ -760,7 +724,8 @@ table {
     padding: 2px;
 }
 
-table>thead>tr>th {
+
+/* table>thead>tr>th {
     padding: 5px;
     padding-left: 5px;
     background: darkblue;
@@ -769,7 +734,7 @@ table>thead>tr>th {
     color: white;
     white-space: nowrap;
     font-size: 15px;
-}
+} */
 
 table>thead>tr>th .balance-header {
     padding: 5px;
